# ROpenSearch

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dev_cluster.sh  dev_cluster_release.sh
.github/: copilot-instructions.md
.github/instructions/: api.instructions.md  engine.instructions.md  node.instructions.md  replication.instructions.md  testing.instructions.md  transport.instructions.md  wal.instructions.md
.github/workflows/: ci.yml
config/: ferrissearch.yml  ropensearch.yml
docs/: vector-search.md
proto/: transport.proto
scripts/: ci-local.sh  ingest_1gb.py  search_1gb.py
src/: lib.rs  main.rs
src/api/: cat.rs  cluster.rs  index.rs  mod.rs  search.rs
src/cluster/: manager.rs  mod.rs  state.rs
src/common/: mod.rs
src/config/: mod.rs
src/consensus/: disk_store.rs  mod.rs  network.rs  state_machine.rs  store.rs  types.rs
src/engine/: composite.rs  mod.rs  routing.rs  tantivy.rs  vector.rs
src/indexing/: mod.rs
src/node/: mod.rs
src/replication/: mod.rs
src/search/: mod.rs
src/shard/: mod.rs
src/storage/: mod.rs
src/transport/: client.rs  mod.rs  server.rs
src/wal/: mod.rs
tests/: consensus_integration.rs  replication_integration.rs
