[package]
name = "ropensearch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
config = "0.15.21"
futures = "0.3.32"
murmur3 = "0.5"
prost = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tantivy = "0.25.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tonic = "0.13"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.13"
